# cairo-backend

./: .env.example  .gitignore  Caddyfile.dev  Dockerfile  README.md  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml
api/: pagination.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
core/: admin.py  cms_admin.py  models.py  validators.py
core/fixtures/: mock_data_with_links.json  places_from_jsonc.json
core/migrations/: 0001_initial.py  0002_alter_historicplace_date_end_and_more.py  0003_historicinterview.py
data/places_jsonc/: 10_OldFreewillBaptistHome.jsonc  11_CustomHouse.jsonc  12_CavalierClubSocial.jsonc  12_⁠CavalierClubSocial.jsonc  13_TwinRiversBaseballPark.jsonc  14_MissionaryBaptistChurch.jsonc  15_FamedPopularStreet.jsonc  16_ThePool.jsonc  17_CentennialPark.jsonc  18_FutureCity.jsonc  1_ConfluenceMississippiOhioRivers.jsonc  2_WardChapelAMEChurch.jsonc  3_FreedmenCamp.jsonc  4_OldCairoDepot .jsonc  5_FirstMissionaryBaptistChurch.jsonc  7_StColumbaSchool.jsonc  8_GreatRiverRoad.jsonc  9_OldCairoCityHall.jsonc
docs/: HEROIC_Scrum_DevPlan.tex  cairo_historic_db_erd.html  cairo_historic_sql_schema.sql
frontend/: app.js  index.html  styles.css
tools/: build_places_fixture.py
